# aa-course

./: .env.template  LICENSE  README.md  docker-compose.yaml  makefile  pyproject.toml
analytics/: Dockerfile
analytics/src/: main.py
analytics/src/application/: app.py
analytics/src/broker/: consumer.py  dependencies.py  producer.py  schemas.py  service.py
analytics/src/controllers/: dependencies.py
analytics/src/db/: declarative.py
analytics/src/dto/: billing.py  task.py  user.py
analytics/src/repositories/: billing_cycle.py  billing_transaction.py  repo_base.py  task.py  user.py
analytics/src/services/: analytics.py
auth/: .env.template  Dockerfile  makefile  pyproject.toml
auth/src/: main.py
auth/src/application/: app.py
auth/src/application/settings/: app.py  auth.py  broker.py  db.py
auth/src/application/settings/logger/: config.py
auth/src/broker/: producer.py  schemas.py
auth/src/controllers/: dependencies.py
auth/src/controllers/routers/v1/: auth.py  healthcheck.py  routers.py
auth/src/db/: declarative.py
auth/src/db/tables/: __init__.py  base.py  user.py
auth/src/dto/: user.py
auth/src/dto/schemas/: request.py
auth/src/migrations/runner/: __main__.py  composite.py  config.py  env.py
auth/src/migrations/versions/: 2023_08_13_16_24_04_init_migration.py  2023_08_14_15_34_53_init_auth_migration.py  2023_08_16_09_07_35_init_auth_migration.py
auth/src/repositories/: repo_base.py  user.py
auth/src/services/: user.py
billing/: Dockerfile  entrypoint.sh
billing/src/: main.py  payment.py
billing/src/application/: app.py
billing/src/broker/: consumer.py  dependencies.py  producer.py  schemas.py  service.py
billing/src/controllers/: dependencies.py
billing/src/db/: declarative.py
billing/src/dto/: billing.py  user.py
billing/src/repositories/: billing_cycle.py  billing_transaction.py  repo_base.py  user.py
billing/src/services/: billing.py
schema_registry/: validators.py
task/: Dockerfile
task/src/: main.py
task/src/application/: app.py
task/src/broker/: consumer.py  dependencies.py  producer.py  schemas.py  service.py
task/src/controllers/: dependencies.py
task/src/db/: declarative.py
task/src/dto/: base.py  task.py  user.py
(+65 files in other folders)
