[tool.poetry]
name = "ATES"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "0.101.1"
uvicorn = {extras = ["standart"], version = "0.23.2"}
pydantic = {extras = ["email", "dotenv"], version = "1.10.12"}
psycopg2-binary = "2.9.7"
sqlalchemy = "2.0.19"
alembic = "1.11.2"
asyncpg = "0.28.0"

JSON-log-formatter = "0.3.1"
python-json-logger = "2.0.7"
python-dateutil = "2.8.2"
python-multipart = "0.0.6"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
aiokafka = "0.8.1"

[tool.poetry.dev-dependencies]
isort = "5.12.0"
black = "23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
extend-exclude = "/migrations/"

[tool.isort]
py_version = 310
profile = "black"
line_length = 119
skip_glob = ["**/migrations/*", ]
# здесь должны быть перечислены все дирктории проекта
known_local_folder = [
    "application",
    "controllers",
    "db",
    "dto",
    "migrations",
    "repositories",
    "services",
]
