[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "0.96.0"
uvicorn = {extras = ["standart"], version = "0.22.0"}
pydantic = {extras = ["email", "dotenv"], version = "1.10.9"}
psycopg2-binary = "2.9.6"
sqlalchemy = "2.0.15"
alembic = "1.11.1"
asyncpg = "0.27.0"

JSON-log-formatter = "0.3.1"
python-json-logger = "2.0.7"
python-dateutil = "2.8.2"

[tool.poetry.dev-dependencies]
isort = "5.12.0"
black = "23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
extend-exclude = "/migrations/"

[tool.isort]
py_version = 310
profile = "black"
line_length = 119
skip_glob = ["**/migrations/*", ]
# здесь должны быть перечислены все дирктории проекта
known_local_folder = [
    "application",
    "controllers",
    "db",
    "dto",
    "migrations",
    "repositories",
    "services",
]
